# ordecimal

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
benches/: alloc.rs  benchmarks.rs  byte_sizes.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_arithmetic.rs  fuzz_decode.rs  fuzz_parse.rs  fuzz_roundtrip.rs
src/: arithmetic.rs  bigdecimal_impl.rs  decimal.rs  decimal_rs_impl.rs  decoder.rs  encoder.rs  error.rs  gamma.rs  integer_impl.rs  lib.rs  main.rs  num_bigint_impl.rs  rust_decimal_impl.rs  serde_impl.rs  significand.rs
tests/: cpp_java_cross_validation.rs  paper_examples.rs  proptest_parsing.rs
