[package]
name = "ordecimal"
version = "0.1.0"
edition = "2021"
rust-version = "1.73"
description = "Order-preserving binary encoding for arbitrary-precision decimals (decimalInfinite)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/baptiste-le-m/ordecimal"
readme = "README.md"
keywords = ["decimal", "encoding", "order-preserving", "database", "sort-key"]
categories = ["encoding", "database"]
exclude = [".github/"]

[dependencies]
thiserror = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "alloc"
harness = false
