[package]
name = "ordecimal"
version = "0.2.1"
edition = "2021"
rust-version = "1.73"
description = "Order-preserving binary encoding for arbitrary-precision decimals (decimalInfinite)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/baptiste-le-m/ordecimal"
readme = "README.md"
keywords = ["decimal", "encoding", "order-preserving", "database", "sort-key"]
categories = ["encoding", "database"]
exclude = [".github/"]

[features]
serde = ["dep:serde"]
rust_decimal = ["dep:rust_decimal"]

[dependencies]
rust_decimal = { version = "1", optional = true, default-features = false }
serde = { version = "1", optional = true }
thiserror = "1.0"

[dev-dependencies]
bincode = "1"
criterion = { version = "0.5", features = ["html_reports"] }
decimal-bytes = "0.4"
memcomparable = { version = "0.2", features = ["decimal"] }
proptest = "1.0"
rust_decimal = "1"
serde_json = "1"

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "alloc"
harness = false

[[bench]]
name = "byte_sizes"
harness = false
